fixed spacing and overflowing in story page

--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -1,13 +1,15 @@
 .story-wrap {
   flex: 1 0 0;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 .story-content-wrap {
   display: flex;
   align-items: center;
-  max-height: 25rem;
   flex: 1;
   width: 65%;
-  max-height: 22rem;
+  // max-height: 22rem;
   margin: 1rem auto 2rem auto;
   padding: 2rem 0 2rem 2rem;
   background-color: $green;
@@ -15,7 +17,7 @@
 }
 .story-text {
   overflow: scroll;
-  max-height: 20rem;
+  max-height: 22rem;
   width: 90%;
   p {
     color: #212121;
