--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -125,9 +125,9 @@ body.default-background {
 div.footer {
   text-align: right;
   margin-right: 2rem;
+  margin-bottom: 0.3rem;
 }
 a.footer {
-  margin-bottom: 0.5rem;
   font-size: 10px;
 }
 a.footer:hover {
